# All-IN-ONE

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
aione/: __init__.py  __main__.py
all_in_one/cli/: __init__.py  auth.py  errors.py  main.py  output.py
skills/all-in-one/: SKILL.md
skills/all-in-one/references/: auth.md  douyin.md  weibo.md  workflows.md  xhs.md
tests/: test_auth_store.py  test_cli_routing.py  test_endpoint_discovery.py  test_integration_smoke.py  test_invoke.py  test_mapping.py  test_module_entrypoint.py  test_output_and_errors.py  test_package_metadata.py  test_readme.py  test_skills.py
