[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "all-in-one-aione"
version = "0.1.1"
description = "Unified CLI and agent skills for XHS, Weibo, and DouYin APIs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "platformdirs>=4.0",
    "requests>=2.28.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "PyExecJS>=1.5.0",
    "retry>=0.9.0",
    "openpyxl>=3.0.0",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.12.0",
    "qrcode>=7.0",
    "protobuf>=3.20.0",
    "protobuf3-to-dict>=0.1.5",
    "websockets>=10.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
creator = [
    "opencv-python>=4.5.0",
    "numpy>=1.20.0",
]
weibo-server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pandas>=2.0.0",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
aione = "all_in_one.cli.main:main"

[tool.setuptools.packages.find]
include = ["all_in_one*", "aione*"]

[tool.pytest.ini_options]
markers = [
    "integration: requires real cookies (deselect with '-m not integration')",
]

